--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
-  "home": "https://kelvinkaungdev.github.io/weather-app",
+  "homepage": "https://kelvinkaungdev.github.io/weather-app",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
